<resources>
    <string name="app_name">Our Diary</string>
    <string name="file_provider">com.zdgeier.ourdiary.fileprovider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="description_text">Description:</string>
    <string name="date_text">Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reply">Reply</string>
    <string name="title_activity_new_entry">NewEntryActivity</string>

    <string name="supporting">Greyhound divisively hello coldly wonderfully marginally far upon excluding.</string>
    <string name="title">Title</string>
    <string name="subhead">Subhead</string>
    <string name="primary">Title goes here</string>
    <string name="primary_short">Title here</string>
    <string name="subtext">Subtitle here</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="expanded_supporting">I\'m a thing. But, like most politicians, he promised more than he could deliver.
        You won\'t have time for sleeping, soldier, not with all the bed making you\'ll be doing. Then we\'ll go with
        that data file! Hey, you add a one and two zeros to that or we walk! You\'re going to do his laundry? I\'ve got
        to find a way to escape.
    </string>

    <string name="dear_diary">Dear Diary</string>
    <string name="done">Done!</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="new_entry_description">New entry picture</string>
</resources>
