<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editEntryLayout">
    <TextView
        android:text="@string/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/newEntryDateTextView" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newEntryTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/dear_diary"
        app:layout_constraintBottom_toTopOf="@+id/newEntryImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEntryDateTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newEntryTextEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/newEntryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/newEntryImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/new_entry_description"
        android:src="@drawable/ic_photo_camera_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/newEntryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEntryTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>