<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/primary_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/primary"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
            app:layout_constraintBottom_toTopOf="@+id/sub_text"
            app:layout_constraintEnd_toStartOf="@+id/textImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/sub_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/subtext"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorSecondaryTextDefaultMaterialLight"
            app:layout_constraintBottom_toTopOf="@+id/text_main_text"
            app:layout_constraintEnd_toStartOf="@+id/textImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primary_text" />

        <TextView
                android:id="@+id/text_main_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:lineSpacingExtra="8dp"
                android:text="@string/expanded_supporting"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryTextDefaultMaterialLight"
                app:layout_constraintTop_toBottomOf="@+id/sub_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>

        <ImageButton
            android:id="@+id/textImageButton"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_more_vert_black_32dp"
            android:tint="@color/colorPrimary"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toTopOf="@+id/text_main_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>